finished translation still some tweaks

--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -130,7 +130,7 @@
     "Error": "مستوى تصحيح الخطأ",
     "Low": "منخفض",
     "Medium": "متوسط",
-    "Quartile": "ربع-عالي", 
+    "Quartile": "ربع-عالي",
     "High": "عالي",
     "recovery": "استرداد",
     "selectionDes": "المستويات الأعلى تسمح بقراءة رمز QR حتى إذا تضرر",
@@ -142,5 +142,29 @@
 
     "NoRestaurantFound": "لم يتم العثور على مطعم",
     "NotFoundDes": "يرجى إعداد بيانات مطعمك أولاً."
+  },
+  "Employees": {
+    "title": "الموظفون",
+    "description": "يمكنك إدارة موظفيك من هنا.",
+    "AddUser": "إضافة مستخدم",
+
+    "NoOrgs": "لم يتم العثور على منظمات",
+    "NoOrgsDes": "يرجى إعداد منظمتك أولاً.",
+
+    "Name": "الاسم",
+    "Email": "البريد الإلكتروني",
+    "Role": "الدور",
+    "Action": "الإجراء",
+
+    "ModalTitle": "إضافة موظف",
+    "ModalDescription": "استخدم هذا لإضافة موظفين إلى عملك.",
+    "FirstName": "الاسم الأول",
+    "LastName": "اسم العائلة",
+    "Password": "كلمة المرور",
+    "Cashier": "كاشير",
+    "Delivery": "توصيل",
+    "Cancel": "إلغاء",
+    "Saving": "جاري الحفظ...",
+    "SaveChanges": "حفظ التغييرات"
   }
 }
