--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -1,6 +1,23 @@
 {
   "landingPage": {
-    "MainTitle": "نحن نخلق تجارب رقمية"
+    "Dashboard": "لوحة القيادة",
+    "CreateAnAccount": "إنشاء حساب",
+    "PageTitle": "امسح. اطلب. أدرِ. — نظام المطعم الشامل بـ QR",
+    "Pra": "دع العملاء يطلبون ويدفعون من هاتفهم. بسّط خدمة الطاولات بدون قوائم ورقية أو موظفين إضافيين.",
+    "serviceTitle": "كل ما تحتاجه لتحديث خدمتك.",
+    "QRTitle": "قائمة & طلب عبر QR",
+    "QRDesc": "اسمح للعملاء بتصفح القائمة وطلب الطعام مباشرة من هواتفهم.",
+    "DashboardTitle": "لوحة إدارة الطلبات",
+    "DashboardDesc": "مركز مركزي لتتبع جميع الطلبات الواردة، إدارة الحالات، وإخطار المطبخ.",
+    "PaymentTitle": "إدارة الطاولات والدفع",
+    "PaymentDesc": "ربط الطلبات بالطاولات وتمكين الدفع الرقمي بسلاسة.",
+    "SmartPhoneTitle": "متوافق مع الموبايل — لا حاجة لتطبيق",
+    "SmartPhoneDesc": "لا حاجة لتحميل أي تطبيق. يمكن للعملاء الوصول للقائمة فوراً من أي متصفح ويب.",
+    "BoltTitle": "خدمة أسرع وكفاءة أفضل",
+    "BoltDesc": "قلل وقت الانتظار وحسّن دوران الطاولات بخط عمل رقمي فعال.",
+    "OurMission": "مهمتنا",
+    "OurMissionDesc": "وُلد QR-Dine من رغبة في مساعدة المطاعم الصغيرة والمتوسطة على تنظيم الطلبات وتقليل تعقيدات الخدمة. نؤمن أن الطلب الرقمي السهل يجب أن يكون متاحاً لكل مطعم. تركيزنا على البساطة والتكلفة المعقولة يميزنا — لمساعدة الأعمال المحلية على الازدهار في عصر الرقمنة.",
+    "CopyRight": "© 2024 QR-Dine. جميع الحقوق محفوظة."
   },
   "NavLinks": {
     "Dashboard": "لوحة القيادة",
