--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -25,7 +25,7 @@
     "Menu": "قائمة",
     "Restaurant": "المطعم",
     "Employees": "الموظفين",
-    "QR Code": "رمز الاستجابة السريعة"
+    "QR Code": "رمز الاستجابة"
   },
   "Dashboard": {
     "title": "لوحة القيادة",
