added buttons actions

--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -237,6 +237,7 @@
     "Quantity": "الكمية",
     "UnitPrice": "سعر الوحدة",
     "Subtotal": "المجموع الفرعي",
-    "Total": "الإجمالي"
+    "Total": "الإجمالي",
+    "Address": "العنوان"
   }
 }
