--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -240,6 +240,9 @@
     "UnitPrice": "Unit Price",
     "Subtotal": "Subtotal",
     "Total": "Total",
-    "Address":"Address"
+    "Address":"Address",
+    "DeliveryStatus":"Delivery Status",
+    "Delivered":"Delivered",
+    "NotDelivered":"not Delivered"
   }
 }
