--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -214,7 +214,9 @@
     "delivery": "توصيل",
     "Processing": "جاري المعالجة...",
     "PlaceOrder": "إتمام الطلب",
-    "AddToCart": "أضف إلى السلة"
+    "AddToCart": "أضف إلى السلة",
+    "successMessage": "تم تقديم الطلب",
+    "failMessage": "لم يتم تقديم الطلب"
   },
   "OrdersDetails": {
     "arrow": "العودة إلى الطلبات",
